Changed src for image button

--- a/input-examples.html
+++ b/input-examples.html
@@ -63,7 +63,7 @@
                 <td>
                     <input
                         type="image"
-                        src="https://cdn.glitch.com/20f985bd-431d-4807-857b-e966e015c91b%2Fcar-20clip-20art-1311497037_Vector_Clipart.png"
+                        src="https://interactive-examples.mdn.mozilla.net/media/examples/login-button.png"
                         alt="submit-button-graphic"
                     />
                 </td>
